# flocker

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  REORGANIZATION.md
src/: cli.rs  config.rs  docker.rs  error.rs  lib.rs  main.rs  state.rs
src/cli/: args.rs  mod.rs  pager.rs  terminal.rs  ui.rs
src/cli/actions/: container.rs  ledger.rs  mod.rs
src/cli/hub/: api.rs  mod.rs  tag.rs
src/docker/: manager.rs  mod.rs  types.rs
src/ui/: container.rs  image.rs  ledger.rs  mod.rs
tests/: container_workflow_test.rs  integration_test.rs
