[package]
name = "flocker"
version = "0.1.0"
edition = "2021"
description = "A stylish CLI tool for managing Fluree Docker containers"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
termion = "2.0"
bollard = "0.15"
tokio = { version = "1.34", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
directories = "5.0"
pad = "0.1"
reqwest = { version = "0.12.9", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
thiserror = "2.0.9"
pathdiff = "0.2"
async-trait = "0.1"
num-format = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tokio-test = "0.4"
tempfile = "3.8"
async-trait = "0.1"
serial_test = "2.0"
